[issue-103] fixed Docker config

--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -1,5 +1,5 @@
 FROM node:latest as vuebuilder
-ADD ./frontend /frontend
+ADD ./ui/frontend /frontend
 WORKDIR /frontend
 
 RUN yarn install
@@ -8,8 +8,8 @@ RUN yarn build
 
 FROM golang:1.16-alpine as gobuilder
 
-ADD ./backend /backend
-WORKDIR /backend
+ADD . /webhook
+WORKDIR /webhook/ui/backend
 RUN go build -o posteeui
 
 FROM alpine
@@ -18,7 +18,10 @@ EXPOSE 8000
 RUN mkdir /uiserver
 RUN mkdir /uiserver/www
 
-COPY --from=gobuilder /backend/posteeui /uiserver
+RUN mkdir /server
+RUN mkdir /server/database
+
+COPY --from=gobuilder /webhook/ui/backend/posteeui /uiserver
 COPY --from=vuebuilder /frontend/dist /uiserver/www
 
 WORKDIR /uiserver
