--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -12,7 +12,7 @@ ADD . /server
 WORKDIR /server/ui/backend
 RUN go build -o posteeui
 
-FROM alpine:alpine3.13
+FROM alpine:3.13
 EXPOSE 8000
 
 RUN mkdir /uiserver
