--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -10,6 +10,7 @@ FROM golang:1.18-alpine as gobuilder
 
 COPY . /server
 WORKDIR /server/ui/backend
+RUN apk add git
 RUN go build -o posteeui
 
 FROM alpine:3.15
