--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -11,7 +11,8 @@ FROM golang:1.18-alpine as gobuilder
 COPY . /server
 WORKDIR /server/ui/backend
 RUN apk add git
-RUN go build -o posteeui
+ARG TARGETOS TARGETARCH
+RUN GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build --ldflags "-s -w" -o posteeui
 
 FROM alpine:3.16.2
 EXPOSE 8001
